# QUANTUM-SIM

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  continuous-validation.yml  publish.yml
docs/: CI.MD  README.md  architecture.md  continuous-validation.md  contributing.md  installation.md  software-design.md
docs/api/: quantum_sim.errors.exceptions.html  quantum_sim.errors.html  quantum_sim.html  quantum_sim.potentials.html  quantum_sim.solver.html  quantum_sim.utils.constants.html  quantum_sim.utils.html  quantum_sim.validators.html  quantum_sim.validators.wave_validators.html  quantum_sim.waves.html  quantum_sim.waves.plane_wave.html  quantum_sim.waves.wave_function.html  quantum_sim.waves.wave_packet.html  quantum_sim.waves.wave_result.html
docs/class/: 01_WaveFunction.ipynb  02_PlaneWave.ipynb  03_WavePacket.ipynb  04_GaussianWavePacket.ipynb  05_SchrodingerSolver.ipynb  README.md
docs/proof_of_concept/: demo_schrodinger_free.py
examples/: Readme.md  demo_plane_wave.py  demo_schrodinger.py  demo_schrodingerStep.py  demo_schrodinger_free_well.py  demo_schrodinger_step.py  demo_shrodingerWell.py  demo_shrodinger_animation.py  demo_waveGausianPacket.py  demo_wavePacket.py
quantumsim/: README.md
scripts/: clean_links.py  generate_docs.sh
src/quantum_sim/: __init__.py  __main__.py  __version__.py
src/quantum_sim/errors/: __init__.py  exceptions.py
src/quantum_sim/potentials/: FreePotential.py  InfiniteWell.py  Potential.py  StepPotential.py  __init__.py  free_potential.py  infinite_well.py  step_potential.py
src/quantum_sim/utils/: __init__.py  constants.py  numerics.py  wave_generators.py
src/quantum_sim/validators/: __init__.py  wave_validators.py
src/quantum_sim/waves/: Draft-wave_Packet.py  PlaneWave.py  WaveFunction.py  WavePacket.py  __init__.py  gaussian_wave_packet.py  plane_wave.py  schrodinger_solver.py  wave_function.py  wave_packet.py  wave_result.py
tests/: test_basic.py  test_potential.py
tests/quantum_sim/errors/: test_exceptions.py
tests/quantum_sim/utils/: test_constants.py
tests/quantum_sim/validators/: test_wave_validators.py
tests/quantum_sim/waves/: test_plane_wave.py  test_schrodinger_solver.py  test_wave_packet.py  test_wave_result.py
