[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "quantum-sim-test-library"
version = "0.1.8-dev1" #TODO : Modifier avant develop -> main
description = "Projet de Simulation Quantique." #TODO : Modifier avant develop -> main
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy ==2.4.1", "coverage (>=7.13.1,<8.0.0)"]

[project.scripts]
quantum-sim = "quantum_sim.__main__:main"
homepage = "https://github.com/UgoW/QUANTUM-SIM"

[tool.poetry]
packages = [{ include = "quantum_sim", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "unit: Unit tests",
    "wave: Tests related to wave simulations",
]
