[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "quantum-sim-library"
version = "1.0.5" 
description = "Un projet de simulation et de visualisation de phénomènes de mécanique quantique développé en Python dans un objectif pédagogique." 
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy ==2.4.1"]

[project.scripts]
quantum-sim = "quantum_sim.__main__:main"

[project.urls]
homepage = "https://github.com/UgoW/QUANTUM-SIM"

[tool.poetry]
packages = [{ include = "quantum_sim", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
coverage = "^7.13.2"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "unit: Unit tests",
    "wave: Tests related to wave simulations",
]
